# tts_novel

./: .gitignore  INSTALL.md  README.md  RUN.md  pyproject.toml
scripts/: edd_smoke_test.py
src/tts_novel/: __init__.py  audio_writer.py  batch_client.py  cli.py  config.py  cost.py  epub_reader.py  gemini_request.py  google_auth.py  kokoro_backend.py  pipeline.py  text_chunker.py  tts_client.py  wav_writer.py
src/tts_novel/backends/: __init__.py  base.py  fallback.py  gemini.py  kokoro.py
tests/: test_audio_writer.py  test_chunker.py  test_config.py  test_fallback_backend.py
